# seal-tk

./: .uncrustify.cfg  CMakeLists.txt  LICENSE
.github/: CODEOWNERS
branding/: Custom.cmake  SEAL-TK.cmake
cmake/: GenerateVersion.cmake  QtTestDiscoverTests.cmake  SEALTKUtils.cmake  sealtk-config.cmake.in  setup_KWIVER.bat.in  setup_KWIVER.sh.in
doc/: CMakeLists.txt
sealtk/: CMakeLists.txt
sealtk/core/: AbstractDataSink.cpp  AbstractDataSink.hpp  AbstractDataSource.cpp  AbstractDataSource.hpp  AbstractItemModel.cpp  AbstractItemModel.hpp  AbstractProxyModel.cpp  AbstractProxyModel.hpp  AutoLevelsTask.cpp  AutoLevelsTask.hpp  CMakeLists.txt  ChainedTransform.cpp  ChainedTransform.hpp  ClassificationFilterModel.cpp  ClassificationFilterModel.hpp  DataModelTypes.hpp  DateUtils.cpp  DateUtils.hpp  DirectoryListing.cpp  DirectoryListing.hpp  FileVideoSourceFactory.cpp  FileVideoSourceFactory.hpp  IdentityTransform.cpp  IdentityTransform.hpp  ImageUtils.cpp  ImageUtils.hpp  KwiverDetectionsSink.cpp  KwiverDetectionsSink.hpp  KwiverFileVideoSourceFactory.cpp  KwiverFileVideoSourceFactory.hpp  KwiverPipelinePortSet.cpp  KwiverPipelinePortSet.hpp  KwiverPipelineWorker.cpp  KwiverPipelineWorker.hpp  KwiverTrackModel.cpp  KwiverTrackModel.hpp  KwiverTrackSource.cpp  KwiverTrackSource.hpp  KwiverTracksSink.cpp  KwiverTracksSink.hpp  (+27 more)
sealtk/core/test/: AutoLevelsTask.cpp  CMakeLists.txt  ClassificationFilterModel.cpp  DateUtils.cpp  DirectoryListing.cpp  ImageUtils.cpp  KwiverDetectionsSink.cpp  KwiverPipelineWorker.cpp  KwiverTrackModel.cpp  KwiverTrackSource.cpp  KwiverTracksSink.cpp  KwiverVideoSource.cpp  ScalarFilterModel.cpp  TestCommon.cpp  TestCommon.hpp  TestTrackModel.cpp  TestTrackModel.hpp  TestTracks.cpp  TestTracks.hpp  TestVideo.cpp  TestVideo.hpp  TestVideoSource.cpp  TestVideoSource.hpp  TimeMap.cpp  TimeStamp.cpp  VideoController.cpp
sealtk/core/test/data/AutoLevelsTask/: test.tif
sealtk/core/test/data/KwiverDetectionsSink/: expected.kw18
sealtk/core/test/data/KwiverPipelineWorker/: excess.pipe  list1.txt  list2.txt  list3.txt  matching.pipe  missing.pipe  test.pipe
sealtk/core/test/data/KwiverTrackSource/: test.kw18
sealtk/core/test/data/KwiverTracksSink/: expected.csv  expected.kw18
sealtk/core/test/data/VideoController/1/: list.txt
sealtk/core/test/data/VideoController/2/: list.txt
sealtk/core/test/data/VideoController/3/: list.txt
sealtk/gui/: AbstractItemModel.cpp  AbstractItemModel.hpp  AbstractItemRepresentation.cpp  AbstractItemRepresentation.hpp  CMakeLists.txt  ClassificationFilterWidget.cpp  ClassificationFilterWidget.hpp  ClassificationSummaryRepresentation.cpp  ClassificationSummaryRepresentation.hpp  CreateDetectionPlayerTool.cpp  CreateDetectionPlayerTool.hpp  CreateTrackPlayerTool.cpp  CreateTrackPlayerTool.hpp  DetectionRepresentation.cpp  DetectionRepresentation.hpp  Enums.cpp  Enums.hpp  FilterWidget.cpp  FilterWidget.hpp  FilterWidget.ui  FusionModel.cpp  FusionModel.hpp  GlobInputDialog.cpp  GlobInputDialog.hpp  GlobInputDialog.ui  KwiverTrackModel.cpp  KwiverTrackModel.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp  Panel.cpp  Panel.hpp  Player.cpp  Player.hpp  Player.ui  PlayerControl.cpp  PlayerControl.hpp  PlayerControl.ui  PlayerTool.cpp  PlayerTool.hpp  PlayerTree.hpp  (+8 more)
sealtk/gui/glsl/: PlayerViewer.qrc  PlayerViewerFragment.glsl
sealtk/gui/resources/: DetectionFragment.glsl  DetectionGeometry.glsl  DetectionVertex.glsl  Icons.qrc  PlayerFragment.glsl  PlayerVertex.glsl  Resources.qrc
sealtk/gui/resources/icons/krest/: index.theme
sealtk/gui/test/: AbstractItemRepresentation.cpp  CMakeLists.txt  FusionModel.cpp
sealtk/noaa/: About.cpp  CMakeLists.txt  ImageListVideoSourceFactory.cpp  ImageListVideoSourceFactory.hpp  Main.cpp  PluginConfig.hpp.in  Plugins.hpp  Window.hpp
sealtk/noaa/cmake/: BuildDirectoryDataFiles.cmake
sealtk/noaa/core/: CMakeLists.txt  Config.h.in  FilenameUtils.cpp  FilenameUtils.hpp  ImageListVideoSourceFactory.cpp  ImageListVideoSourceFactory.hpp  NoaaPipelineWorker.cpp  NoaaPipelineWorker.hpp
sealtk/noaa/gui/: About.cpp  About.hpp  About.ui  CMakeLists.txt  ClassificationFilterWidget.cpp  ClassificationFilterWidget.hpp  NotesDelegate.cpp  NotesDelegate.hpp  Player.cpp  Player.hpp  Resources.cpp  Resources.hpp  TrackScoreDelegate.cpp  TrackScoreDelegate.hpp  TrackTypeDelegate.cpp  TrackTypeDelegate.hpp  Window.cpp  Window.hpp  Window.ui
sealtk/noaa/kwiver/: CMakeLists.txt  Plugin.cpp  TimestampPassthrough.cpp  TimestampPassthrough.hpp
sealtk/noaa/share/seal-tk/pipelines/: test.pipe
sealtk/noaa/test/: CMakeLists.txt  FilenameUtils.cpp  ImageListVideoSourceFactory.cpp
sealtk/noaa/test/data/ImageListVideoSourceFactory/: list.txt
src/: About.cpp  About.hpp  CMakeLists.txt  Config.h.in  Main.cpp  Panel.cpp  Panel.hpp  Player.cpp  Player.hpp  Player.ui  PlayerTree.cpp  PlayerTree.hpp  PlayerViewer.cpp  PlayerViewer.hpp  SplitterWindow.cpp  SplitterWindow.hpp  SplitterWindow.ui  Window.cpp  Window.hpp  Window.ui
src/app/: About.cpp  About.hpp  CMakeLists.txt  Panel.cpp  Panel.hpp  Player.cpp  Player.hpp  Player.ui  PlayerTree.hpp  PlayerViewer.cpp  PlayerViewer.hpp  SplitterWindow.cpp  SplitterWindow.hpp  Window.cpp  Window.hpp
src/app/glsl/: PlayerViewer.qrc  PlayerViewerVertex.glsl
src/core/: CMakeLists.txt  DateUtils.cpp  FileVideoSourceFactory.cpp  KwiverFileVideoSourceFactory.cpp  KwiverVideoSource.cpp  VideoController.cpp  VideoSource.cpp
src/core/test/: CMakeLists.txt  DateUtils.cpp  KwiverVideoSource.cpp  VideoController.cpp  VideoSource.cpp
src/gui/: About.cpp  CMakeLists.txt  Player.ui  PlayerTree.cpp  PlayerTree.ui  Resources.cpp  Window.cpp
src/lib/: CMakeLists.txt  Config.h.in  Version.h.in  VideoSource.cpp  VideoSource.hpp
src/noaa/: CMakeLists.txt  FilenameUtils.cpp  Main.cpp  Plugins.cpp  Window.cpp  Window.ui
src/noaa/test/: CMakeLists.txt  FilenameUtils.cpp  ImageListVideoSourceFactory.cpp
src/test/: CMakeLists.txt  SEALTKTest.cpp  SEALTKTest.hpp  TestConfig.h.in  TestCore.cpp  VideoSource.cpp
src/test/data/images/: list1.txt
utilities/: source_check.py
(+32 files in other folders)
